welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:1: error: '<-' expected but ')' found.
for ( i -> 1 to 10 )
                   ^Runner:13: error: illegal start of simple expression
	}
        ^